--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light ">
         <div class="container justify-content-between jc">
             <div> <a class="navbar-brand" href="#">
-                    <img src="../images/favicon-32x32.png" alt="logo">
+                    <img src="./images/favicon-32x32.png" alt="logo">
                 </a></div>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
